--- a/index.html
+++ b/index.html
@@ -292,6 +292,7 @@
                 font-size:14px;
             }
             .top-menu .nav-link.active{
+                margin-right: 0 !important;
                 background:#0F4C81;
                 color:#fff;
             }
