--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
         .section-body p{
             color: #0F4C81;
             font-size: 16px;
+            text-align: justify;
         }
         /* About */
         .about img{
