--- a/index.html
+++ b/index.html
@@ -78,10 +78,8 @@
                         <div class="col-md-9">
                             <p>
                                 I am a third year Computer Engineering PhD Student with a focus in Human-Computer Interaction (HCI)
-                                <br><br>
-                                Group: <a href="https://hybridatelier.uta.edu/" target="_blank" class="highlight-link">The Hybrid Atelier </a> in UT Arlington.
-                                <br><br>
-                                Advisor: <a href="http://cearto.com/" target="_blank" class="highlight-link">Dr. Cesar Torres</a>
+                                <p><strong>Group:</strong><a href="https://hybridatelier.uta.edu/" target="_blank" class="highlight-link">The Hybrid Atelier </a> in UT Arlington.</p>
+                                </p><strong>Advisor:</strong><a href="http://cearto.com/" target="_blank" class="highlight-link">Dr. Cesar Torres</a>.</p>
                                 <br><br>
                                 <strong>Research interest:</strong> Human-Material Interaction, Wearable & Sensing, and Bio-medical application.
                                 <!-- I am a Research Scientist at Apple in the Video Computer-Vision Science team. I completed my CS PhD in 2023 at UC Berkeley, where I worked with Björn Hartmann.
