--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
                         </div>
                         <div class="col-md-9">
                             <p>
-                                I am a third year Computer Engineering PhD Student with a focus in Human-Computer Interaction (HCI)
+                                I am a third year Computer Engineering PhD Student with a focus in Human-Computer Interaction (HCI).
                                 <p><strong>Group:</strong><a href="https://hybridatelier.uta.edu/" target="_blank" class="highlight-link">The Hybrid Atelier </a> in UT Arlington.</p>
-                                </p><strong>Advisor:</strong><a href="http://cearto.com/" target="_blank" class="highlight-link">Dr. Cesar Torres</a>.</p>
-                                <br><br>
+                                </p><strong>Advisor:</strong> <a href="http://cearto.com/" target="_blank" class="highlight-link">Dr. Cesar Torres</a>.</p>
+                                <br>
                                 <strong>Research interest:</strong> Human-Material Interaction, Wearable & Sensing, and Bio-medical application.
                                 <!-- I am a Research Scientist at Apple in the Video Computer-Vision Science team. I completed my CS PhD in 2023 at UC Berkeley, where I worked with Björn Hartmann.
                                 Research interests: HCI, computer vision, ML dev tools, model optimization
