--- a/index.html
+++ b/index.html
@@ -76,11 +76,13 @@
                             <img src="img/avatar.svg" alt="profile">
                         </div>
                         <div class="col-md-9">
-                            <p>I am a third year Computer Engineering PhD Student at UT Arlington with a focus in material sensing and human-material interaction in HCI.</p>
-                            <p><strong>Group:</strong> <a href="https://hybridatelier.uta.edu/" target="_blank" class="highlight-link">The Hybrid Atelier</a></p>
-                            <p><strong>Advisor:</strong> <a href="http://cearto.com/" target="_blank" class="highlight-link">Dr. Cesar Torres</a></p>
-                            <p><strong>Committee:</strong> <a href="https://ranger.uta.edu/~mingli/" target="_blank" class="highlight-link">Ming Li</a>, <a href="https://debashriroy.github.io" target="_blank" class="highlight-link">Debashri Roy</a>, <a href="https://www.uta.edu/academics/faculty/profile?user=yiran.yang" target="_blank" class="highlight-link">Emma Yang</a></p>
-                            <p><strong>Research interest:</strong> Human-Material Interaction (HCI), Wearable & Sensing, and Bio-medical application.</p>
+                            <p>
+                                I am a third year Computer Engineering PhD Student at UT Arlington with a focus in material sensing and human-material interaction in HCI.<br>
+                                <strong>Group:</strong> <a href="https://hybridatelier.uta.edu/" target="_blank" class="highlight-link">The Hybrid Atelier</a><br>
+                                <strong>Advisor:</strong> <a href="http://cearto.com/" target="_blank" class="highlight-link">Dr. Cesar Torres</a><br>
+                                <strong>Committee:</strong> <a href="https://ranger.uta.edu/~mingli/" target="_blank" class="highlight-link">Ming Li</a>, <a href="https://debashriroy.github.io" target="_blank" class="highlight-link">Debashri Roy</a>, <a href="https://www.uta.edu/academics/faculty/profile?user=yiran.yang" target="_blank" class="highlight-link">Emma Yang</a><br>
+                                <strong>Research interest:</strong> Human-Material Interaction (HCI), Wearable & Sensing, and Bio-medical application.
+                            </p>
                         </div>
                     </div>
                 </div>
