--- a/index.html
+++ b/index.html
@@ -77,12 +77,11 @@
                         </div>
                        <div class="col-md-9">
                             <p>
-                                I am currently a PhD Student in Human-Computer Interaction (HCI) at University of Texas at Arlington, advised by <strong><a href="http://cearto.com/" target="_blank" class="highlight-link">Cesar Torres</a></strong> in <a href="https://hybridatelier.uta.edu/" target="_blank" class="highlight-link">The Hybrid Atelier</a>. My research focuses on Fluid Sensing, Human-Material Interaction, Wearable & Sensing, and Bio-medical applications. My committee includes <a href="https://ranger.uta.edu/~mingli/" target="_blank" class="highlight-link">Ming Li</a>, <a href="https://debashriroy.github.io" target="_blank" class="highlight-link">Debashri Roy</a>, and <a href="https://www.uta.edu/academics/faculty/profile?user=yiran.yang" target="_blank" class="highlight-link">Emma Yang</a>.
+                                I am currently a PhD Student in Human-Computer Interaction (HCI) at University of Texas at Arlington, advised by <strong><a href="http://cearto.com/" target="_blank" class="highlight-link">Cesar Torres</a></strong> in <a href="https://hybridatelier.uta.edu/" target="_blank" class="highlight-link">The Hybrid Atelier</a>.<br>
+                                My research focuses on Fluid Sensing, Human-Material Interaction, Wearable & Sensing, and Bio-medical applications.<br>
+                                Committee: <a href="https://ranger.uta.edu/~mingli/" target="_blank" class="highlight-link">Ming Li</a>, <a href="https://debashriroy.github.io" target="_blank" class="highlight-link">Debashri Roy</a>, and <a href="https://www.uta.edu/academics/faculty/profile?user=yiran.yang" target="_blank" class="highlight-link">Emma Yang</a>.
                             </p>
                         </div>
-
-                        <div class="container-text-about">
-                            <h2 class="title-about" id="aboutme">About Me</h2>
                             <p>
                                 I graduated from the University of Minnesota-Twin Cities (2019) with a degree in EE and a minor in CS. I also have an M.Sc. in EE with a Signal Processing concentration from California State University, Fullerton (2022), with experience in EE hardware design and sensing.
                                 <br><br>
@@ -92,7 +91,6 @@
                                 <br><br>
                                 In my free time, I enjoy exploring new places and foods, skateboarding, swimming, and gaming.
                             </p>
-                        </div>
                     </div>
                 </div>
             </section>
