--- a/index.html
+++ b/index.html
@@ -75,22 +75,28 @@
                         <div class="col-md-3">
                             <img src="img/avatar.svg" alt="profile">
                         </div>
-                       <div class="col-md-9">
+                        <div class="col-md-9">
                             <p>
-                                I am currently a PhD Student in Human-Computer Interaction (HCI) at University of Texas at Arlington, advised by <strong><a href="http://cearto.com/" target="_blank" class="highlight-link">Cesar Torres</a></strong> in <a href="https://hybridatelier.uta.edu/" target="_blank" class="highlight-link">The Hybrid Atelier</a>.<br>
-                                My research focuses on Fluid Sensing, Human-Material Interaction, Wearable & Sensing, and Bio-medical applications.<br>
-                                Committee: <a href="https://ranger.uta.edu/~mingli/" target="_blank" class="highlight-link">Ming Li</a>, <a href="https://debashriroy.github.io" target="_blank" class="highlight-link">Debashri Roy</a>, and <a href="https://www.uta.edu/academics/faculty/profile?user=yiran.yang" target="_blank" class="highlight-link">Emma Yang</a>.
+                                I am currently a PhD Student in Human-Computer Interaction(HCI) at University of Texas at Arlington, 
+                                advised by <strong><a href="http://cearto.com/" target="_blank" class="highlight-link">Cesar Torres</a></strong> in <br>
+                                <a href="https://hybridatelier.uta.edu/" target="_blank" class="highlight-link">The Hybrid Atelier</a>. 
+                                I build sensing systems and interactive tools that help people work with materials—especially fluids—by revealing their rheological behavior through visualizations, so they can tune and refine materials for creative design and interaction.
+                                <br>
+                                <strong>Committee:</strong> <a href="http://cearto.com/" target="_blank" class="highlight-link">Cesar Torres (advisor)</a> ,<a href="https://ranger.uta.edu/~mingli/" target="_blank" class="highlight-link">Ming Li</a>, <a href="https://debashriroy.github.io" target="_blank" class="highlight-link">Debashri Roy</a>, <a href="https://www.uta.edu/academics/faculty/profile?user=yiran.yang" target="_blank" class="highlight-link">Emma Yang</a><br>
+                                <strong>Research interest:</strong> Fluid Sensing, Human-Material Interaction, Wearable & Sensing, and Bio-medical application.
+                            </p>
+                            <p>
+                                Alongside fabrication and material sensing, I also collaborate in bio-sensing and medical devices. 
+                                In Summer 2025, I was a Visiting Researcher at UC Irvine’s HERO Lab, working on a wearable Speckle Plethysmography (SPG) project for blood pressure sensing.
+                            </p>
+                            <p>
+                                Before my PhD, I earned a B.S. in Electrical Engineering with a Computer Science minor from the University of Minnesota–Twin Cities (2019), and an M.S. in Electrical Engineering (signal processing) from California State University, Fullerton (2022). 
+                                I’ve also worked in medical devices and bio-sensing, including at ACIST Medical Systems and Sensoriis (Calit2, UC Irvine)—experiences that shaped how I think about building systems that are both technically rigorous and usable in the real world.
+                            </p>
+                            <p>
+                                When I’m not in the lab, I’m usually exploring new places and food, skateboarding, swimming, or gaming.
                             </p>
                         </div>
-                            <p>
-                                I graduated from the University of Minnesota-Twin Cities (2019) with a degree in EE and a minor in CS. I also have an M.Sc. in EE with a Signal Processing concentration from California State University, Fullerton (2022), with experience in EE hardware design and sensing.
-                                <br><br>
-                                Previously, I worked in medical devices and bio-sensing at <a href="https://acist.com/" target="_blank" class="highlight-link">ACIST Medical System</a> and <a href="https://sensoriis.com/" target="_blank" class="highlight-link">Sensoriis</a> in Calit2, University of California, Irvine.
-                                <br><br>
-                                During Summer 2025, I was a Visiting Researcher at <a href="https://hero.eng.uci.edu/" target="_blank" class="highlight-link">Hero Lab</a> at University of California, Irvine, working on a wearable Speckle Plethysmography (SPG) project.
-                                <br><br>
-                                In my free time, I enjoy exploring new places and foods, skateboarding, swimming, and gaming.
-                            </p>
                     </div>
                 </div>
             </section>
