--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
 
             <div class="introduce">
-                <span>Hi! I’m a researcher, designer, & artist making feminist technologies.</span>
+                <span>Howdy! I’m a researcher, designer, & material sensing making technologies.</span>
             </div>
 
             <div class="blog-list">
@@ -73,11 +73,11 @@
                 <div class="section-body">
                     <div class="row">
                         <div class="col-md-3">
-                            <img src="img/avatar.svg" alt="profile">
+                            <img src="img/avatar.jpg" alt="profile">
                         </div>
                         <div class="col-md-9">
                             <p>
-                                Howdy! I’m Charlie (he/him/they), born in HCMC, Vietnam; based in Dallas-Fort Worth, TX.<br>
+                                Hi! I’m Charlie (he/him/they), born in HCMC, Vietnam; based in Dallas-Fort Worth, TX.<br>
                                 I am currently a PhD Student in Human-Computer Interaction (HCI) at University of Texas at Arlington, 
                                 where I work with <strong><a href="http://cearto.com/" target="_blank" class="highlight-link">Dr. Cesar Torres</a></strong> in
                                 <a href="https://hybridatelier.uta.edu/" target="_blank" class="highlight-link">The Hybrid Atelier</a>.
@@ -87,7 +87,7 @@
                             </p>
                             <p>
                                 Alongside with HCI, I also collaborate in bio-sensing and medical devices. 
-                                Last summer 2025, I was Visiting Researcher working with <a href="https://engineering.uci.edu/users/hung-cao" target="_blank" class="highlight-link">Dr. Hung Cao</a> at <a href="https://hero.eng.uci.edu/" target="_blank" class="highlight-link">Hero Lab</a> in University of California, Irvine, 
+                                Last summer 2025, I was visiting researcher working with <a href="https://engineering.uci.edu/users/hung-cao" target="_blank" class="highlight-link">Dr. Hung Cao</a> at <a href="https://hero.eng.uci.edu/" target="_blank" class="highlight-link">Hero Lab</a> in University of California, Irvine, 
                                 for the wearable Speckle Plethysmography (SPG) project for blood pressure sensing.
                             </p>
                         </div>
