--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
                                 Alongside with HCI, I also collaborate in bio-sensing and medical devices. 
                                 Last summer 2025, I was visiting researcher working with <a href="https://engineering.uci.edu/users/hung-cao" target="_blank" class="highlight-link">Dr. Hung Cao</a> at <a href="https://hero.eng.uci.edu/" target="_blank" class="highlight-link">Hero Lab</a> in University of California, Irvine, 
                                 for the wearable Speckle Plethysmography (SPG) project for blood pressure sensing.
+                                <br><br>
+                                <strong>CV:</strong> <a href="https://docs.google.com/document/d/1-DpBK0FKELFJNZy_ADhKhxHIr6lmWM1M" target="_blank" rel="noopener noreferrer" style="color: inherit;">View my full CV here →</a>
                             </p>
                         </div>
                     </div>
@@ -277,7 +279,7 @@
                         </svg>
 
                     </a>
-                    <a href="https://docs.google.com/document/d/1-DpBK0FKELFJNZy_ADhKhxHIr6lmWM1M/edit">
+                    <a href="https://docs.google.com/document/d/1-DpBK0FKELFJNZy_ADhKhxHIr6lmWM1M">
                         <svg width="35" height="35" viewBox="0 0 35 35" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <rect width="35" height="35" rx="17.5" fill="#0F4C81"/>
                             <path fill-rule="evenodd" clip-rule="evenodd" d="M8.21875 17.5001C8.21875 16.0856 8.8752 14.729 10.0437 13.7288C11.2122 12.7287 12.797 12.1667 14.4495 12.1667H21.8341C22.997 12.1667 24.1123 12.5622 24.9345 13.266C25.7568 13.9698 26.2188 14.9245 26.2188 15.9198C26.2188 16.9152 25.7568 17.8698 24.9345 18.5737C24.1123 19.2775 22.997 19.6729 21.8341 19.6729H14.3175C13.6443 19.6729 12.9986 19.444 12.5226 19.0365C12.0465 18.629 11.7791 18.0764 11.7791 17.5001C11.7791 16.9238 12.0465 16.3711 12.5226 15.9637C12.9986 15.5562 13.6443 15.3272 14.3175 15.3272H21.5701C21.7537 15.3272 21.9298 15.3897 22.0597 15.5008C22.1895 15.6119 22.2624 15.7627 22.2624 15.9198C22.2624 16.077 22.1895 16.2277 22.0597 16.3389C21.9298 16.45 21.7537 16.5124 21.5701 16.5124H14.3175C14.0115 16.5124 13.718 16.6165 13.5016 16.8017C13.2852 16.9869 13.1637 17.2381 13.1637 17.5001C13.1637 17.762 13.2852 18.0132 13.5016 18.1985C13.718 18.3837 14.0115 18.4877 14.3175 18.4877H21.8341C22.6298 18.4877 23.3928 18.2172 23.9555 17.7356C24.5181 17.254 24.8341 16.6009 24.8341 15.9198C24.8341 15.2388 24.5181 14.5856 23.9555 14.1041C23.3928 13.6225 22.6298 13.3519 21.8341 13.3519H14.4495C13.1642 13.3519 11.9316 13.789 11.0228 14.5669C10.1139 15.3448 9.60337 16.3999 9.60337 17.5001C9.60337 18.6002 10.1139 19.6553 11.0228 20.4333C11.9316 21.2112 13.1642 21.6482 14.4495 21.6482H21.5701C21.7537 21.6482 21.9298 21.7107 22.0597 21.8218C22.1895 21.9329 22.2624 22.0837 22.2624 22.2408C22.2624 22.398 22.1895 22.5487 22.0597 22.6598C21.9298 22.771 21.7537 22.8334 21.5701 22.8334H14.4495C12.797 22.8334 11.2122 22.2715 10.0437 21.2713C8.8752 20.2711 8.21875 18.9146 8.21875 17.5001Z" fill="white"/>
