--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                     <a href="https://debashriroy.github.io" target="_blank" rel="noopener noreferrer" style="color: inherit; text-decoration: none;">Debashri Roy</a>, 
                                     <a href="https://www.uta.edu/academics/faculty/profile?user=yiran.yang" target="_blank" rel="noopener noreferrer" style="color: inherit; text-decoration: none;">Emma Yang</a>
                                 <br>
-                                <strong>Research interest:</strong> Fluid Sensing, Human-Material Interaction, Wearable & Sensing, and Bio-medical application.
+                                <strong>Research Keywords:</strong> Fluid Sensing, Human-Material Interaction, Wearable & Sensing, and Bio-medical application.
                             </p>
                         </div>
 
