--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                 Last summer 2025, I was visiting researcher working with <a href="https://engineering.uci.edu/users/hung-cao" target="_blank" class="highlight-link">Dr. Hung Cao</a> at <a href="https://hero.eng.uci.edu/" target="_blank" class="highlight-link">Hero Lab</a> in University of California, Irvine, 
                                 for the wearable Speckle Plethysmography (SPG) project for blood pressure sensing.
                                 <br><br>
-                                <strong>CV:</strong> <a href="https://docs.google.com/document/d/1-DpBK0FKELFJNZy_ADhKhxHIr6lmWM1M" target="_blank" rel="noopener noreferrer" style="color: inherit;">View my full CV here →</a>
+                                <a href="https://docs.google.com/document/d/1-DpBK0FKELFJNZy_ADhKhxHIr6lmWM1M" target="_blank" rel="noopener noreferrer" style="color: inherit;">View my full CV here →</a>
                             </p>
                         </div>
                     </div>
