--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                 <small>Blog</small>
                 <ul class="list-unstyled mt-2">
                     <li class="mb-2"><small><strong>October 2025</strong> – <a href="#">You are welcome to attend my PhD seminar</a></small></li>
-                    <li class="mb-2"><small><strong>November 2025</strong> – <a href="#">Selected to attend the 80% seminar</a></small></li>
-                    <li><small><strong>December 2025</strong> – <a href="#">Welcome to attend my PhD</a></small></li>
+                    <li class="mb-2"><small><strong>June 2025</strong> – <a href="#">Visting researcher at Hero Lab at UC Irvine</a></small></li>
+                    <li><small><strong>May 2025</strong> – <a href="#">Attening my first CHI2025 at Yokohama, Japan</a></small></li>
                 </ul>
             </div>
         </aside>
