--- a/index.html
+++ b/index.html
@@ -140,14 +140,25 @@
                     </div>
                     <div class="exp-item">
                         <div class="col-md-3 e-l">
-                            <a href="#"><strong>Apple · Research Scientist </strong></a>
+                            <a href="#"><strong>Sensoriis · Research Engineer</strong></a>
                             <br>
-                            <small>2023 – 2024</small>
+                            <small>Feb 2020 – Aug 2022</small>
                         </div>
                         <div class="col-md-9 e-r">
                             <p>My team develops and deploys machine learning model optimization and analysis techniques, enabling the launch of Apple Intelligence (on-device LLMs) and the Vision Pro (research post: optimization).</p>
                         </div>
                     </div>
+
+                    <!-- <div class="exp-item">
+                        <div class="col-md-3 e-l">
+                            <a href="#"><strong>University of Minnesota · Electrical Engineer</strong></a>
+                            <br>
+                            <small>Feb 2020 – Aug 2022</small>
+                        </div>
+                        <div class="col-md-9 e-r">
+                            <p>My team develops and deploys machine learning model optimization and analysis techniques, enabling the launch of Apple Intelligence (on-device LLMs) and the Vision Pro (research post: optimization).</p>
+                        </div>
+                    </div> -->
 
                 </div>
             </section>
