--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                 <ul class="list-unstyled mt-2">
                     <li class="mb-2"><small><strong>December 2025</strong> – <a href="#">Visiting Brain-Life and VNU-HCM University of Science</a></small></li>
                     <li class="mb-2"><small><strong>June 2025</strong> – <a href="#">Summer visting researcher at Hero Lab at UC Irvine</a></small></li>
-                    <li class="mb-2"><small><strong>May 2025</strong> – <a href="#">Giving a talk about RheoMap at VNU-HCM University of Science and Ho Chi Minh City International University </a></small></li>
-                    <li><small><strong>May 2025</strong> – <a href="#">Attening my first CHI2025 at Yokohama, Japan</a></small></li>
+                    <li class="mb-2"><small><strong>May 2025</strong> – <a href="#">Giving a talk about RheoMap at VNU-HCM University of Science and HCMC-IU </a></small></li>
+                    <li><small><strong>May 2025</strong> – <a href="#">Attening my first CHI25 at Yokohama, Japan</a></small></li>
                 </ul>
             </div>
         </aside>
