--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
                         </div>
                         <div class="col-md-9 e-r">
                             <p>
-                                Built and validated wearable biosensing systems (SPG/ECG), integrating optics/AFE/embedded firmware, and collecting physiological datasets for blood pressure and HRV analysis.
+                                Built and validated wearable biosensing systems (SPG/ECG), integrating optics/AFE/embedded firmware, 
+                                and collecting physiological datasets for blood pressure and HRV analysis.
                             </p>
                         </div>
                     </div>
@@ -148,7 +149,8 @@
                         </div>
                         <div class="col-md-9 e-r">
                             <p>
-                                Developed embedded biomedical signal acquisition—developing nRF52832 BLE firmware, integrating ADS1299 biopotential front-ends, and applying signal processing/filtering for ECG and signal analysis.
+                                Developed embedded biomedical signal acquisition—developing nRF52832 BLE firmware, 
+                                integrating ADS1299 biopotential front-ends, and applying signal processing/filtering for ECG and signal analysis.
                             </p>
                         </div>
                     </div>
@@ -157,10 +159,14 @@
                         <div class="col-md-3 e-l">
                             <a href="#"><strong>ACIST Medical Systems · Electrical Engineer Intern</strong></a>
                             <br>
-                            <small>May 2019 – Sept 2010</small>
+                            <small>May 2019 – Sept 2019</small>
                         </div>
                         <div class="col-md-9 e-r">
-                            <p>My team develops and deploys machine learning model optimization and analysis techniques, enabling the launch of Apple Intelligence (on-device LLMs) and the Vision Pro (research post: optimization).</p>
+                            <p>
+                                Implemented embedded test automation for medical imaging systems—writing Arduino firmware, 
+                                building a LabVIEW producer–consumer GUI to interface with X-ray simulator hardware, 
+                                and running test protocol and mechanical validation on imaging catheters.
+                            </p>
                         </div>
                     </div>
 
