--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
                     <div class="exp-item">
                         <div class="col-md-3 e-l">
-                            <a href="#"><strong>ACIST Medical Systems · Electrical Engineer Intern</strong></a>
+                            <a href="#"><strong>ACIST Medical · R&D Engineer Intern</strong></a>
                             <br>
                             <small>May 2019 – Sept 2019</small>
                         </div>
