--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                 <strong><a href="https://hybridatelier.uta.edu/" target="_blank" class="highlight-link">The Hybrid Atelier</a>.</strong>
                             </p>
                             <p>
-                                <strong>My research:</strong> building sensing systems and interactive tools that work with materials, especially fluids by revealing their rheological behavior through visualizations, supporting materials literacy for creative tool and interaction design in makerspace.
+                                <strong>My research:</strong> building sensing systems and interactive tools that work with materials, especially fluids by revealing their rheological behavior through visualizations, supporting materials literacy for creative and interaction design in makerspace.
                             </p>
                             <p>
                                 <strong>Committee:</strong> 
@@ -136,7 +136,7 @@
                         </div>
                         <div class="col-md-9 e-r">
                             <p>
-                                Built and validated wearable biosensing systems (SPG/ECG), integrating optics/AFE/embedded firmware, 
+                                Built and validated wearable biosensing systems (SPG/ECG), integrating optics, embedded firmware, 
                                 and collecting physiological datasets for blood pressure and HRV analysis.
                             </p>
                         </div>
@@ -149,8 +149,8 @@
                         </div>
                         <div class="col-md-9 e-r">
                             <p>
-                                Developed embedded biomedical signal acquisition—developing nRF52832 BLE firmware, 
-                                integrating ADS1299 biopotential front-ends, and applying signal processing/filtering for ECG and signal analysis.
+                                Designed embedded biomedical signal acquisition, developed nRF52832 BLE firmware, 
+                                integrated ADS1299 biopotential measurement, and applied signal processing/filtering for ECG and signal analysis.
                             </p>
                         </div>
                     </div>
@@ -163,9 +163,9 @@
                         </div>
                         <div class="col-md-9 e-r">
                             <p>
-                                Implemented embedded test automation for medical imaging systems—writing Arduino firmware, 
-                                building a LabVIEW producer–consumer GUI to interface with X-ray simulator hardware, 
-                                and running test protocol and mechanical validation on imaging catheters.
+                                Implemented embedded test automation for medical imaging systems, 
+                                built a LabVIEW producer/consumer GUI to interface with X-ray simulator hardware, 
+                                and validated protocol and mechanical validation on imaging catheters.
                             </p>
                         </div>
                     </div>
