--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                         </div>
                         <!-- Profile picture - right side -->
                        <div class="col-md-3 d-flex align-items-center justify-content-center">
-                            <img src="img/project-display.jpg" alt="Project showcase" class="img-fluid rounded shadow-sm" style="max-height: 280px; object-fit: cover;">
+                            <img src="img/project.jpg" alt="Project showcase" class="img-fluid rounded shadow-sm" style="max-height: 280px; object-fit: cover;">
                         </div>
                     </div>
                 </div>
