--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                             <img src="img/project.svg" alt="project">
                         </div> -->
                         <div class="col-md-3 d-flex align-items-center justify-content-start">
-                            <img src="img/project.svg" alt="Project showcase" class="img-fluid rounded shadow-sm" style="max-height: 280px; object-fit: cover;">
+                            <img src="img/project.svg" alt="Project showcase" class="img-fluid rounded shadow-sm" style="max-height: 280px; object-fit: cover; margin-left: -50px;">
                         </div>
                     </div>
                 </div>
