--- a/index.html
+++ b/index.html
@@ -162,14 +162,9 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Profile picture - right side -->
-                        <!-- <div class="col-md-3 d-flex align-items-center justify-content-center">
-                            <img src="img/project.svg" alt="project">
-                        </div> -->
+                        <!-- Experiment picture - right side -->
                         <div class="col-md-3 d-flex align-items-center justify-content-start">
-                            <!-- <img src="img/project.svg" alt="Project showcase" class="img-fluid rounded shadow-sm" style="max-height: 280px; object-fit: cover;"> -->
                              <img src="img/project.svg" alt="Project showcase" class="img-fluid rounded shadow-sm" style="max-height: 280px; object-fit: cover; transform: translateY(-20px);">
-                            <!-- <img src="img/project.svg" alt="Project showcase" class="img-fluid rounded shadow-sm" style="max-height: 280px; object-fit: cover; margin-top: -20px;"> -->
                         </div>
                     </div>
                 </div>
