--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                         </div>
 
                         <script>
-                        const images = ['img/hero_lab/Gathering-Hero-Lab-06-2025.png', 'img/hero_lab/Paella-1.png', 'img/hero_lab/Paella-2.png'];
+                        const images = ['img/hero_lab/Gathering-Hero-Lab-06-2025.png', 'img/hero_lab/Paella-1.jpg', 'img/hero_lab/Paella-2.jpg'];
                         let current = 0;
                         const imgEl = document.getElementById('projectImg');
 
