--- a/index.html
+++ b/index.html
@@ -163,13 +163,9 @@
                             </div>
                         </div>
                         <!-- Experiment picture - right side -->
-                        <!-- <div class="col-md-3 d-flex align-items-center justify-content-start">
-                             <img src="img/project.svg" alt="Project showcase" class="img-fluid rounded shadow-sm" style="max-height: 280px; object-fit: cover; transform: translateY(-20px);">
-                        </div>
-                         -->
                         <div style="transform: translateY(-20px); text-align: center;">
                             <img id="projectImg" src="img/hero_lab/Gathering-Hero-Lab-06-2025.png" alt="Project showcase" class="img-fluid rounded shadow-sm" style="max-height: 280px; object-fit: cover; transition: opacity 0.5s;">
-                            <small class="d-block text-muted mt-2">Hero Lab's gathering</small>
+                            <small class="d-block text-muted mt-2">Gathering with Hero Lab UCI reasearch team</small>
                         </div>
 
                         <script>
