--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
                         </div>
                         <!-- Experiment picture - right side -->
                         <div class="col-md-3 d-flex align-items-center justify-content-start">
-                             <img src="img/hero_lab/Gathering-Hero-Lab-06-2025.png" alt="Project showcase" class="img-fluid rounded shadow-sm" style="max-height: 280px; object-fit: cover; transform: translateY(-20px);">
+                             <img src="img/hero_lab/Gathering-Hero-Lab-06-2025_crop.png" alt="Project showcase" class="img-fluid rounded shadow-sm" style="max-height: 280px; object-fit: cover; transform: translateY(-20px);">
+                             <small class="d-block text-muted mt-2">Gathering with Hero Lab UCI reasearch team</small>
                         </div>  
                     </div>
                 </div>
