--- a/index.html
+++ b/index.html
@@ -163,10 +163,16 @@
                             </div>
                         </div>
                         <!-- Experiment picture - right side -->
-                        <div class="col-md-3 d-flex align-items-center justify-content-start">
+                        <!-- <div class="col-md-3 d-flex align-items-center justify-content-start">
                              <img src="img/hero_lab/Gathering-Hero-Lab-06-2025_crop.png" alt="Project showcase" class="img-fluid rounded shadow-sm" style="max-height: 280px; object-fit: cover; transform: translateY(-20px);">
                              <small class="d-block text-muted mt-2">Gathering with Hero Lab UCI reasearch team</small>
-                        </div>  
+                        </div>   -->
+                        <div class="col-md-3 d-flex align-items-center justify-content-center">
+                            <div class="text-center" style="transform: translateY(-20px);">
+                                <img src="img/hero_lab/Gathering-Hero-Lab-06-2025_crop.png" alt="Project showcase" class="img-fluid rounded shadow-sm" style="max-height: 350px; object-fit: cover;">
+                                <small class="d-block text-muted mt-2">Gathering with Hero Lab UCI research team</small>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
