--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
                                 </div>
                                 <div class="col-md-8 e-r">
                                     <p>
-                                        Designed embedded biomedical signal acquisition, developed nRF52832 BLE firmware, 
-                                        integrated ADS1299 biopotential measurement, and applied signal processing/filtering for ECG and signal analysis.
+                                        Designed embedded biomedical signal acquisition, developed nRF BLE firmware, 
+                                        integrated ADS1299 biopotential measurement, and processed ECG and EEG for analysis.
                                     </p>
                                 </div>
                             </div>
@@ -156,7 +156,7 @@
                                 <div class="col-md-8 e-r">
                                     <p>
                                         Implemented embedded test automation for medical imaging systems, 
-                                        built a LabVIEW producer/consumer GUI to interface with X-ray simulator hardware, 
+                                        built a LabVIEW GUI to interface with X-ray simulator hardware, 
                                         and validated protocol and mechanical validation on imaging catheters.
                                     </p>
                                 </div>
@@ -169,7 +169,7 @@
                         </div>   -->
                         <div class="col-md-3 d-flex align-items-center justify-content-center">
                             <div class="text-center" style="transform: translateY(-20px);">
-                                <img src="img/hero_lab/Gathering-Hero-Lab-06-2025_crop.png" alt="Project showcase" class="img-fluid rounded shadow-sm" style="max-height: 350px; object-fit: cover;">
+                                <img src="img/hero_lab/Gathering-Hero-Lab-06-2025_crop.png" alt="Project showcase" class="img-fluid rounded shadow-sm" style="max-height: 450px; width: 100%; object-fit: cover;">
                                 <small class="d-block text-muted mt-2">Gathering with Hero Lab UCI research team</small>
                             </div>
                         </div>
