--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                         </div>   -->
                         <div class="col-md-3 d-flex align-items-center justify-content-center">
                             <div class="text-center" style="transform: translateY(-20px);">
-                                <img src="img/hero_lab/Gathering-Hero-Lab-06-2025_crop.png" alt="Project showcase" class="img-fluid rounded shadow-sm" style="max-height: 450px; width: 100%; object-fit: cover;">
+                                <img src="img/hero_lab/Gathering-Hero-Lab-06-2025_crop.png" alt="Project showcase" class="img-fluid rounded shadow-sm" style="max-height: 450px; width: 100%;"> 
                                 <small class="d-block text-muted mt-2">Gathering with Hero Lab UCI research team</small>
                             </div>
                         </div>
@@ -193,7 +193,7 @@
                                 <div class="p-3">
                                     <a href="#">
                                         <strong>Apple · Research Scientist </strong>
-                                        <p class="mb-0 first">Peitong Duan, Jeremy Warner, Yang Li, Björn Hartmann</p>
+                                        <p class="mb-0 first">Mark Boyher, Hoang Vuong, Hung Cao</p>
                                         <br>
                                         <p>My team develops and deploys machine learning model optimization and analysis techniques</p>
                                     </a>
