--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                                     <br>
                                     <small>June 2025 – Sept 2025</small>
                                 </div>
-                                <div class="col-md-6 e-r">
+                                <div class="col-md-6 c e-r">
                                     <p>
                                         Built and validated wearable biosensing systems (SPG/ECG), integrating optics, embedded firmware, 
                                         and collecting physiological datasets for blood pressure and HRV analysis.
@@ -140,7 +140,7 @@
                                     <br>
                                     <small>Feb 2020 – Aug 2022</small>
                                 </div>
-                                <div class="col-md-6 e-r">
+                                <div class="col-md-6 c e-r">
                                     <p>
                                         Designed embedded biomedical signal acquisition, developed nRF BLE firmware, 
                                         integrated ADS1299 biopotential measurement, and processed ECG and EEG for analysis.
@@ -153,7 +153,7 @@
                                     <br>
                                     <small>May 2019 – Sept 2019</small>
                                 </div>
-                                <div class="col-md-6 e-r">
+                                <div class="col-md-6 c e-r">
                                     <p>
                                         Implemented embedded test automation for medical imaging systems, 
                                         built a LabVIEW GUI to interface with X-ray simulator hardware, 
