--- a/index.html
+++ b/index.html
@@ -205,12 +205,12 @@
                             <div class="project-card">
                                 <div class="project-thumb">
                                     <a href="#">
-                                        <img src="img/project.svg" alt="project">
+                                        <img src="img/rheomap.png" alt="project">
                                     </a>
                                 </div>
                                 <div class="p-3">
                                     <a href="#">
-                                        <strong>Apple · Research Scientist </strong>
+                                        <strong>RheoMap (CHI25) </strong>
                                         <p class="mb-0 first">Charlie Vuong, and Cesar Torres</p>
                                         <br>
                                         <p>My team develops and deploys machine learning model optimization and analysis techniques</p>
