--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                             <div class="project-card">
                                 <div class="project-thumb">
                                     <a href="#">
-                                        <img src="img/spg.jpeg" alt="project">
+                                        <img src="img/spg.png" alt="project">
                                     </a>
                                 </div>
                                 <div class="p-3">
