--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                                 <div class="p-3">
                                     <a href="#">
                                         <strong>Team Magicoil </strong>
-                                        <p class="mb-0 first">Vinit Kumar Chugh, Kai Wu, Abilash Nair, Charlie Vuong and Jian-Ping Wang/p>
+                                        <p class="mb-0 first">Vinit Kumar Chugh, Kai Wu, Abilash Nair, Charlie Vuong and Jian-Ping Wang</p>
                                         <br>
                                         <p>My team develops and deploys machine learning model optimization and analysis techniques</p>
                                     </a>
