--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                                 </div>
                             </div>
                             <!-- Experiment picture - center -->
-                            <div class="col-md-4 e-r text-center d-flex flex-column align-items-center justify-content-start">
+                            <div class="col-md-4 e-l d-flex flex-column align-items-center justify-content-start">
                                 <div class="text-center" style="transform: translateY(-20px);">
                                     <img src="img/hero_lab/Gathering-Hero-Lab-06-2025_crop.png" alt="Project showcase" class="img-fluid rounded shadow-sm" style="max-height: 450px; width: 100%; object-fit: cover;"> 
                                     <small class="d-block text-muted mt-2">Gathering with Hero Lab UCI research team</small>
