--- a/index.html
+++ b/index.html
@@ -232,6 +232,24 @@
                                 </div>
                             </div>
                         </div>
+                        
+                        <div class="col-md-4">
+                            <div class="project-card">
+                                <div class="project-thumb" style="height: 200px; overflow: hidden; display: flex; align-items: center; justify-content: center;">
+                                    <a href="#">
+                                        <img src="img/hero_lab/ECG_EnKF.png" alt="project" style="max-height: 100%; max-width: 100%; object-fit: contain;">
+                                    </a>
+                                </div>
+                                <div class="p-3">
+                                    <a href="#">
+                                        <strong>EKG </strong>
+                                        <p class="mb-0 first">Xing Xia, Charlie Vuong, Tai Le and Hung Cao</p>
+                                        <br>
+                                        <p>dsadsadsa.</p>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
 
                         <div class="col-md-4">
                             <div class="project-card">
@@ -242,10 +260,10 @@
                                 </div>
                                 <div class="p-3">
                                     <a href="#">
-                                        <strong>Rodent EEG </strong>
+                                        <strong>Wearable Rodent EEG </strong>
                                         <p class="mb-0 first">Xing Xia, Charlie Vuong, Tai Le and Hung Cao</p>
                                         <br>
-                                        <p>My team develops and deploys machine learning model optimization and analysis techniques</p>
+                                        <p>Implemented BLE Firmware and Designed Hardware for Biopotential Acquisition for Analyzing Local Field Potentials in Rodents.</p>
                                     </a>
                                 </div>
                             </div>
