--- a/index.html
+++ b/index.html
@@ -242,10 +242,10 @@
                                 </div>
                                 <div class="p-3">
                                     <a href="#">
-                                        <strong>EKG </strong>
-                                        <p class="mb-0 first">Xing Xia, Charlie Vuong, Tai Le and Hung Cao</p>
+                                        <strong>ECG Denoising with EnKF (EMBC 2022)</strong>
+                                        <p class="mb-0 first">Sadaf Sarafan, Charlie Vuong, Michael P.H. Lau, Tadesse Ghirmai, and Hung Cao</p>
                                         <br>
-                                        <p>dsadsadsa.</p>
+                                        <p>Appling EnKF for denoising ECG signals, alongside a comparative analysis of various filtering algorithm</p>
                                     </a>
                                 </div>
                             </div>
@@ -279,7 +279,7 @@
                                 <div class="p-3">
                                     <a href="#">
                                         <strong>Team Magicoil (DMD2020)</strong>
-                                        <p class="mb-0 first">Vinit Kumar Chugh, Kai Wu, Abilash Nair, Charlie Vuong and Jian-Ping Wang</p>
+                                        <p class="mb-0 first">Vinit Kumar Chugh, Kai Wu, Abilash Nair, Charlie Vuong, and Jian-Ping Wang</p>
                                         <br>
                                         <p>Magnetic Particle Spectroscopy-Based Handheld Device for Wash-Free, Easy-to-Use, and Solution-Phase Immunoassay Applications</p>
                                     </a>
