--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                                     </a>
                                 </div>
                                 <div class="p-3">
-                                    <a href="#">
+                                    <a href="https://www.glassart.org/membership/conference-journals/">
                                         <strong>Tacit Captions (GAS2025)</strong>
                                         <p class="mb-0 first">Lejun Liao, Rohita Konjeti, Charlie Vuong, and Cesar Torres</p>
                                         <br>
