--- a/index.html
+++ b/index.html
@@ -95,8 +95,9 @@
                                     <a href="https://ranger.uta.edu/~mingli/" target="_blank" rel="noopener noreferrer" style="color: inherit; text-decoration: none;">Ming Li</a>, 
                                     <a href="https://debashriroy.github.io" target="_blank" rel="noopener noreferrer" style="color: inherit; text-decoration: none;">Debashri Roy</a>, 
                                     <a href="https://www.uta.edu/academics/faculty/profile?user=yiran.yang" target="_blank" rel="noopener noreferrer" style="color: inherit; text-decoration: none;">Emma Yang</a>
-                                <br>
-                                <strong>Keywords:</strong> Fluid Sensing, Human-Material Interaction, Wearable & Sensing, and Bio-medical application.
+                            </p>
+                            <p> 
+                                <strong>Keywords:</strong> Human-Material Interaction, Wearable & Sensing, and Bio-medical application.
                             </p>
                         </div>
 
